@@ -25,8 +25,8 @@ repositories {
 dependencies {
     implementation 'org.apache.commons:commons-dbcp2:2.10.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.3'
-    implementation 'org.apache.logging.log4j:log4j-core:2.21.0'
-    implementation 'com.oracle.database.jdbc:ojdbc10:19.20.0.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.21.1'
+    implementation 'com.oracle.database.jdbc:ojdbc10:19.21.0.0'
     implementation 'org.springframework:spring-jdbc:6.0.13'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
